Melhorias na infra dos serviços. Serviços complementares no módulo de Avaliação
